--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,14 +16,17 @@
     "noUnusedParameters": true,
     "strict": true,
     "strictPropertyInitialization": true,
-    "lib": ["ES2020"],
+    "lib": [
+      "ES2020"
+    ],
     "typeRoots": [
       "./typings"
     ]
   },
   "include": [
-    "./**/*.ts"
-, "miniprogram/ec-canvas/ec-canvas.js"  ],
+    "./**/*.ts",
+    "miniprogram/ec-canvas/ec-canvas.js"
+  ],
   "exclude": [
     "node_modules"
   ]
